fix(common): datetime label value wrap #74

--- a/modules/common/src/dateTime/dateTime.component.scss
+++ b/modules/common/src/dateTime/dateTime.component.scss
@@ -10,6 +10,9 @@
   .placeholder {
     color: var(--ion-color-medium);
   }
+  .value {
+    white-space: nowrap;
+  }
   .selectIcon {
     margin: 0;
     padding-left: 4px;
